# alfred

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/sidecar/: alfred_asr.py  requirements.txt
src-tauri/src/: lib.rs  main.rs
src-tauri/src/asr/: mod.rs  protocol.rs  sidecar.rs  whisper_native.rs
src-tauri/src/audio/: capture.rs  mod.rs  priority_mic.rs
src-tauri/src/automation/: app_control.rs  media.rs  mod.rs  system.rs  window_mgmt.rs
src-tauri/src/commands/: matcher.rs  mod.rs  registry.rs
src-tauri/src/integrations/: editor.rs
src-tauri/src/ipc/: commands.rs  events.rs  mod.rs  transcript_store.rs
src-tauri/src/model/: download.rs  mod.rs  storage.rs
src-tauri/src/permissions/: checker.rs  mod.rs
src-tauri/src/settings/: config.rs  mod.rs  shortcuts.rs
src/components/animations/: HotMicPulse.tsx  MicIndicator.tsx  index.ts
src/components/layout/: AppShell.tsx  Sidebar.tsx  index.ts
src/components/shared/: Button.tsx  Card.tsx  PermissionRow.tsx  ShortcutInput.tsx  Slider.tsx  Toggle.tsx  index.ts
src/hooks/: index.ts  useAudio.ts  usePermissions.ts  useSettings.ts  useTheme.ts  useTranscription.ts
src/pages/main/: MainWindow.tsx  TranscriptView.tsx
src/pages/onboarding/: ConfigureShortcuts.tsx  DownloadModel.tsx  SetupPermissions.tsx
src/pages/settings/: AppearanceSystem.tsx  AudioTranscription.tsx  EditorIntegrations.tsx  HotMicSettings.tsx  (+3 more)
src/types/: commands.ts  index.ts
