[package]
name = "alfred"
version = "0.1.0"
description = "Alfred — Voice transcription and command execution for macOS"
authors = ["Alfred"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "alfred_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri core
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-process = "2"
tauri-plugin-os = "2"
tauri-plugin-dialog = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Audio capture
cpal = "0.15"

# macOS APIs
cocoa = "0.26"
objc = "0.2"
core-foundation = "0.10"

# HTTP for model downloads
reqwest = { version = "0.12", features = ["stream", "json"] }

# File system
dirs = "6"

# Logging
log = "0.4"
env_logger = "0.11"

# Error handling
thiserror = "2"
anyhow = "1"

# UUID generation
uuid = { version = "1", features = ["v4"] }

# Fuzzy matching for commands
strsim = "0.11"

# Regex for command patterns
regex = "1"

# Crossbeam for audio pipeline channels
crossbeam-channel = "0.5"

whisper-rs = "0.14"

# Parking lot for efficient mutexes
parking_lot = "0.12"

[target.'cfg(target_os = "macos")'.dependencies]
# macOS-specific accessibility
accessibility = "0.1"
